Fix exception handling in fe fot unauthorized and forbidden

--- a/base-project-frontend/src/app/home/home.component.html
+++ b/base-project-frontend/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<p>
+  <mat-toolbar color="primary">
+    <span>Base App</span>
+    <span class="example-spacer"></span>
+    <button matTooltip="Logout" mat-icon-button (click)="logout()">
+      <mat-icon>logout</mat-icon>
+    </button>
+  </mat-toolbar>
+</p>
