--- a/base-project-frontend/src/app/error-dialog/error-dialog.component.html
+++ b/base-project-frontend/src/app/error-dialog/error-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Error</h2>
+<h2 mat-dialog-title>{{ data.heading }}</h2>
 <div mat-dialog-content>
   <p>{{ data.message }}</p>
 </div>
